Refactor network policy creation
Signed-off-by: Jakub Scholz <www@scholzj.com>